src/test/ui/liveness/liveness-move-in-while.nll.stderr
error[E0382]: borrow of moved value: `y`
  --> $DIR/liveness-move-in-while.rs:7:24
   |
LL |     let y: Box<isize> = box 42;
   |         - move occurs because `y` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait
...
LL |         println!("{}", y);
   |                        ^ value borrowed here after move
LL |         while true { while true { while true { x = y; x.clone(); } } }
   |                                                    - value moved here, in previous iteration of loop

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
